samples/_failures_safe/1761646322_b1f838_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cd6a1b1.c:158:1: error: expected identifier or ‘(’ at end of input
  158 | void
      | ^~~~
